[gd_scene load_steps=7 format=3 uid="uid://cvl3x8ikri1a4"]

[ext_resource type="Theme" uid="uid://dw7ft4xik3rji" path="res://Assets/Theme/Normal.tres" id="1_m8ind"]
[ext_resource type="Script" path="res://Script/UI/DungeonPanel.gd" id="2_yqkn2"]
[ext_resource type="PackedScene" uid="uid://bwegnxa4rtgh2" path="res://Scene/UI/TitleBar.tscn" id="4_a0e4k"]
[ext_resource type="Texture2D" uid="uid://dp0iy2awe2e3l" path="res://Icon.png" id="6_e8yfv"]
[ext_resource type="Script" path="res://Script/UI/DungeonInfoPanel.gd" id="6_pebq8"]
[ext_resource type="LabelSettings" uid="uid://buvwr4pla8wi1" path="res://Assets/LabelSetting/BigWhite.tres" id="7_hjtc4"]

[node name="DungeonPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_m8ind")
script = ExtResource("2_yqkn2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -490.0
offset_top = 2457.0
offset_right = 490.0
offset_bottom = 3857.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="TitleBar" parent="Panel/MarginContainer/VBoxContainer" instance=ExtResource("4_a0e4k")]
unique_name_in_owner = true
layout_mode = 2
title_text = "地下城"

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="DungeonInfoPanel" type="Panel" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_type_variation = &"SubPanel"
script = ExtResource("6_pebq8")

[node name="Content" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/DungeonInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/DungeonInfoPanel/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/DungeonInfoPanel/Content/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = -50

[node name="Icon" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/DungeonInfoPanel/Content/VBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture = ExtResource("6_e8yfv")
expand_mode = 2
stretch_mode = 6

[node name="NameLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/DungeonInfoPanel/Content/VBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Name"
label_settings = ExtResource("7_hjtc4")
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/DungeonInfoPanel/Content/VBoxContainer2"]
layout_mode = 2

[node name="UnNextLevelBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/DungeonInfoPanel/Content/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "上一级"

[node name="CurrentLevelLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/DungeonInfoPanel/Content/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Lv 1"
label_settings = ExtResource("7_hjtc4")
horizontal_alignment = 1

[node name="NextLevelBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/DungeonInfoPanel/Content/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "下一级"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/DungeonInfoPanel/Content/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="CostLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/DungeonInfoPanel/Content/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "门票钱：200"
label_settings = ExtResource("7_hjtc4")
horizontal_alignment = 1

[node name="RewardLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/DungeonInfoPanel/Content/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "奖励：300 金币"
label_settings = ExtResource("7_hjtc4")
horizontal_alignment = 1

[node name="EnterBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/DungeonInfoPanel/Content"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "进入"

[node name="Itmes" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 40
